# turing-machine

./: CMakeLists.txt  README.md
include/: input-validator.hpp  turing-machine.hpp
src/: input-validator.cpp  main.cpp  turing-machine.cpp
